--- a/javascript/introduction-to-js-1/first-splash/number-guessing-game-start.html
+++ b/javascript/introduction-to-js-1/first-splash/number-guessing-game-start.html
@@ -41,8 +41,15 @@
     </div>
 
     <script>
+const guesses = document.querySelector('.guesses');
+const lastResult = document.querySelector('.lastResult');
+const lowOrHi = document.querySelector('.lowOrHi');
 
-      // Your JavaScript goes here
+const guessSubmit = document.querySelector('.guessSubmit');
+const guessField = document.querySelector('.guessField');
+
+let guessCount = 1;
+let resetButton;
 
     </script>
   </body>
